--- a/index.html
+++ b/index.html
@@ -7,12 +7,27 @@
     <title>Palindrome Checker</title>
   </head>
   <body>
+    
     <div class="container">
+      <h1>Palindrome Checker</h1>
         <div class="input-container">
             <input id="text-input" required>
             <button id="check-btn">Check</button>
         </div>
       <div id="result"></div>
+    </div>
+    <div class="note">
+      <p>
+        A palindrome is a word, phrase, number, or sequence of characters that reads the same forward and backward, ignoring spaces, punctuation, and capitalization.
+      </p>
+      <br>
+      <p>For example:</p>
+      <br>
+      <ul>
+        <li><span>"racecar"</span> → same forward and backward.</li>
+        <br>
+        <li><span>"A man, a plan, a canal. Panama"</span> → when spaces, punctuation, and capitalization are removed, it becomes <span>"amanaplanacanalpanama"</span>, which is the same in reverse.</li>
+      </ul>
     </div>
     <script src="script.js"></script>
   </body>
